# latticefold

./: .gitignore  .rustfmt.toml  CODEOWNERS  Cargo.toml  LICENSE  README.md  SECURITY.md  bounds.sage  decompo_bench.out  deny.toml  extract_data.py  output.txt  results.csv  run_benchmarks.sh
.github/workflows/: build-and-test.yml  ci.yml  dependency-audit.yml  linter.yml
ajtai_commit/src/: main.rs
crates/latticefold/: Cargo.toml  build.rs
crates/latticefold-plus/: Cargo.toml
crates/latticefold-plus/benches/: README.md  cm.rs  decomp.rs  double_commitment.rs  e2e.rs  lin.rs  mlin.rs  rgchk.rs  setchk.rs  split.rs
crates/latticefold-plus/src/: cm.rs  decomp.rs  (+8 more)
crates/rings/: Cargo.toml
cyclotomic-rings/: Cargo.toml
cyclotomic-rings/src/: challenge_set.rs  lib.rs  rings.rs  rot_sum.rs  rotation.rs
cyclotomic_field/src/: lib.rs
examples/: Cargo.toml  README.md
examples/examples/: goldilocks.rs
latticefold/: Cargo.toml  build.rs
latticefold-examples/: Cargo.toml
latticefold-plus/: Cargo.toml
latticefold-plus/benches/: e2e.rs
latticefold-plus/src/: cm.rs  decomp.rs  dopen.rs  fold.rs  lib.rs  lin.rs  mlin.rs  plus.rs  r1cs.rs  rgchk.rs  setchk.rs  utils.rs
latticefold/benches/: ajtai.rs  config.toml  decomposition.rs  decomposition_ops.rs  e2e.rs  extract_data.sh  extract_json.py  folding.rs  folding_ops.rs  linearization.rs  linearization_ops.rs  macros.rs  macros_bounds.rs  operations.rs  single_operations.rs  utils.rs
latticefold/examples/: babybear.rs  frog.rs  goldilocks.rs  starkprime.rs
latticefold/src/: arith.rs  commitment.rs  decomposition_parameters.rs  lib.rs  nifs.rs  parameters.rs  transcript.rs  utils.rs
latticefold/src/arith/: ccs.rs  error.rs  r1cs.rs  utils.rs
latticefold/src/arith/rings/: mod.rs
latticefold/src/commitment/: commitment_scheme.rs  homomorphic_commitment.rs
latticefold/src/nifs/: common_helpers.rs  decomposition.rs  error.rs  folding.rs  linearization.rs  mle_helpers.rs  structs.rs  tests.rs
latticefold/src/nifs/decomposition/: structs.rs  tests.rs  utils.rs
latticefold/src/nifs/decomposition/tests/: mod.rs
latticefold/src/nifs/folding/: structs.rs  tests.rs  utils.rs
latticefold/src/nifs/folding/tests/: mod.rs
latticefold/src/nifs/linearization/: challenge_generator.rs  structs.rs  tests.rs  utils.rs
latticefold/src/nifs/linearization/tests/: mod.rs
latticefold/src/transcript/: poseidon.rs
latticefold/src/utils/: mle.rs  mle_helpers.rs  security_check.rs  sumcheck.rs  uv_polynomial.rs
latticefold/src/utils/sumcheck/: dense_polynomial.rs  prover.rs  univ_poly.rs  utils.rs  verifier.rs  virtual_polynomial.rs
notebooks/: bounds.sage  bounds_L_output.txt  bounds_no_L.sage  bounds_output.txt  goldilocks_no_L_bounds.txt  output.txt
(+63 files in other folders)
