[workspace] 
members = [ "latticefold", "cyclotomic-rings"]
resolver = "2"

[workspace.dependencies]
ark-ff = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
lattirust-arithmetic = { git = "ssh://git@github.com/NethermindEth/lattirust.git", branch = "ElijahVlasov/better-trait-system", default-features = false }