[package]
name = "examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
cyclotomic-rings = { path = "../cyclotomic-rings", default-features = false }
latticefold = { path = "../latticefold", default-features = false }
lattirust-linear-algebra = { workspace = true }
lattirust-poly = { workspace = true }
lattirust-ring = { workspace = true }

[dev-dependencies]
humansize = "2.1.3"